--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ psycopg2 = "^2.8.6"
 ipython = "^7.23.0"
 pandas = "^1.2.4"
 spacy = "^3.0.6"
+ankipandas = "^0.3.10"
 
 [tool.poetry.dev-dependencies]
 
