--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# projectj-specific files
+flashcards/create_word_csvs.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/*
 ./flashcards/__pycache__/*
