--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # projectj-specific files
 flashcards/create_word_csvs.py
+data/datadump*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/*
+denkmit/__pycache__/*
 ./flashcards/__pycache__/*
 *.py[cod]
 *$py.class
