--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # projectj-specific files
 flashcards/create_word_csvs.py
 data/datadump*
+data/backups
 
 # Byte-compiled / optimized / DLL files
 __pycache__/*
