--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^1.2.4"
 spacy = "^3.0.6"
 ankipandas = "^0.3.10"
 jupyter = "^1.0.0"
+django-dbbackup = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
 
